tests/expectations/compiler/interfaces/path_inheritance_missing_fail.out
Error [ECHI03712002]: Program `test.aleo` implements interface `lib.aleo/Counter` but is missing the required function `increment`.
    --> compiler-test:4:1
     |
   4 | program test.aleo: lib.aleo::Counter {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   5 |     fn main(x: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
   6 |         return 0;
     |         ^^^^^^^^^
   7 |     }
     |     ^
   8 | }
     | ^
     |
     = Add the missing function with the exact signature specified in the interface.


---
Note: Treating dependencies as Aleo produces different results:

Error [ECHI03712000]: Interface `lib.aleo/Counter` not found.
    --> compiler-test:4:20
     |
   4 | program test.aleo: lib.aleo::Counter {
     |                    ^^^^^^^^^^^^^^^^^
     |
     = Make sure the interface is defined in the current program or an imported program.
